<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tencent.modebuilder.view.PageActionBar
        android:id="@+id/page_action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        app:center_text_title="@string/mode_setting" />

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/ed_prefix"
            android:layout_weight="1"
            android:hint="@string/prefix"
            android:focusable="false"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_shape"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/ed_content"
            android:layout_weight="1"
            android:hint="@string/content"
            android:focusable="false"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_shape"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/ed_suffix"
            android:layout_weight="1"
            android:hint="@string/suffix"
            android:focusable="false"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_shape"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/tv_save_mode"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/bg_sure_selector"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tv_data_format_explain"
            android:text="@string/data_format_explain"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>